@@ -22,6 +22,7 @@ import com.backstage.app.dict.configuration.backend.provider.DictSchemeBackendPr
 import com.backstage.app.dict.configuration.properties.DictsProperties;
 import com.backstage.app.dict.constant.ServiceFieldConstants;
 import com.backstage.app.dict.domain.*;
+import com.backstage.app.dict.domain.scheme.DictNativeScheme;
 import com.backstage.app.dict.exception.dict.DictAlreadyExistsException;
 import com.backstage.app.dict.exception.dict.constraint.ConstraintAlreadyExistsException;
 import com.backstage.app.dict.exception.dict.constraint.ConstraintNotFoundException;
@@ -132,6 +133,10 @@ public class DictService
 	// сейчас обновляется схема только для DictField и DictEnum, последний только в монго.
 	@LockDictSchemaModifyOperation("#dictId")
 	@CachePut(value = DictsConfiguration.CACHE_NAME_DICTS, key = "#dictId")
+	@CacheEvict(
+			value = {DictsConfiguration.CACHE_NAME_DICT_DATA_FIELDS, DictsConfiguration.CACHE_NAME_DICT_SCHEMES},
+			key = "#dictId"
+	)
 	public Dict update(String dictId, Dict dict)
 	{
 		var actualDict = getById(dictId);
@@ -189,7 +194,13 @@ public class DictService
 	@Transactional
 	//	TODO: История изменений схемы, даты создания/обновления схемы?
 	@LockDictSchemaModifyOperation("#dictId")
-	@CacheEvict(value = DictsConfiguration.CACHE_NAME_DICTS, key = "#dictId")
+	@CacheEvict(
+			value = {
+					DictsConfiguration.CACHE_NAME_DICTS,
+					DictsConfiguration.CACHE_NAME_DICT_DATA_FIELDS,
+					DictsConfiguration.CACHE_NAME_DICT_SCHEMES},
+			key = "#dictId"
+	)
 	public void delete(String dictId)
 	{
 		var dict = getById(dictId);
@@ -204,7 +215,14 @@ public class DictService
 
 	@Transactional
 	@LockDictSchemaModifyOperation("#dictId")
-	@CacheEvict(value = DictsConfiguration.CACHE_NAME_DICTS, key = "#dictId")
+	@CacheEvict(
+			value = {
+					DictsConfiguration.CACHE_NAME_DICTS,
+					DictsConfiguration.CACHE_NAME_DICT_DATA_FIELDS,
+					DictsConfiguration.CACHE_NAME_DICT_SCHEMES
+			},
+			key = "#dictId"
+	)
 	public DictField renameField(String dictId, String fieldId, String newFieldId, String newFieldName)
 	{
 		var dict = getById(dictId);
@@ -431,7 +449,7 @@ public class DictService
 
 	@Transactional
 	@LockDictSchemaModifyOperation("#dictId")
-	@CacheEvict(value = DictsConfiguration.CACHE_NAME_DICTS, key = "#dictId")
+	@CacheEvict(value = {DictsConfiguration.CACHE_NAME_DICTS}, key = "#dictId")
 	public void deleteEnum(String dictId, String enumId)
 	{
 		var dict = getById(dictId);
@@ -460,14 +478,21 @@ public class DictService
 		dictBackend.deleteEnum(dict, enumId);
 	}
 
-	// TODO: кэш
-	public static List<DictField> getDataFieldsByDict(Dict dict)
+	@Cacheable(value = DictsConfiguration.CACHE_NAME_DICT_DATA_FIELDS)
+	public List<DictField> getDataFieldsByDict(Dict dict)
 	{
 		return dict.getFields()
 				.stream()
 				.filter(it -> !ServiceFieldConstants.getServiceSchemeFields().contains(it.getId()))
-//				FIXME: На данном этапе коллекция должна быть изменяемой
-				.collect(Collectors.toList());
+				.toList();
+	}
+
+	@Cacheable(value = DictsConfiguration.CACHE_NAME_DICT_SCHEMES, sync = true)
+	public DictNativeScheme getNativeScheme(String dictId)
+	{
+		var dict = getById(dictId);
+
+		return schemeBackend(dict).getNativeScheme(dict);
 	}
 
 	// TODO: кэш
